Sun Jun 23 23:05:58 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/defines.h (BDIGIT): Define it only if it is not defined
	  yet.  This eases tests and debug.
	  (SIZEOF_BDIGITS): Ditto.
	  (BDIGIT_DBL): Ditto.
	  (BDIGIT_DBL_SIGNED): Ditto.
	  (PRI_BDIGIT_PREFIX): Ditto.
	  (PRI_BDIGIT_DBL_PREFIX): Ditto.
	  (PRIdBDIGIT): Define it only if PRI_BDIGIT_PREFIX is defined.
	  (PRIiBDIGIT): Ditto.
	  (PRIoBDIGIT): Ditto.
	  (PRIuBDIGIT): Ditto.
	  (PRIxBDIGIT): Ditto.
	  (PRIXBDIGIT): Ditto.
	  (PRIdBDIGIT_DBL): Ditto.
	  (PRIiBDIGIT_DBL): Ditto.
	  (PRIoBDIGIT_DBL): Ditto.
	  (PRIuBDIGIT_DBL): Ditto.
	  (PRIxBDIGIT_DBL): Ditto.
	  (PRIXBDIGIT_DBL): Ditto.

	* include/ruby/ruby.h (RBIGNUM_EMBED_LEN_MAX): Define it only if it is
	  not defined yet.

Sun Jun 23 17:29:51 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (integer_unpack_single_bdigit): Use a cast.

Sun Jun 23 15:38:07 2013  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_thread.rb: rescue resource limitation errors.

Sun Jun 23 08:19:27 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (integer_unpack_single_bdigit): Extracted from
	  bary_unpack_internal.

Sun Jun 23 07:41:52 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_unpack_internal): Suppress warnings (C4146) on Visual Studio.
	  Reported by ko1 via IRC.

Sun Jun 23 06:49:28 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h, gc.c: rename macros and functions:
	  OBJ_WB_GIVEUP() -> OBJ_WB_UNPROTECT(),
	  rb_obj_wb_giveup() -> rb_obj_wb_unprotect(),
	  rb_gc_giveup_promoted_writebarrier() ->
	  rb_gc_writebarrier_unprotect_promoted(),

	* class.c, eval.c, hash.c: use OBJ_WB_UNPROTECT().

Sun Jun 23 05:41:32 2013  Koichi Sasada  <ko1@atdot.net>

	* class.c (rb_include_class_new), eval.c (rb_using_refinement):
	  make classes/modules (who share method table) shady.
	  If module `a' and `b' shares method table m_tbl and new method
	  with iseq is added, then write barrier is applied only `a' or `b'.